# mosaic-core

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  README_8md.html  a__data__channel__handler_8cpp.html  a__data__channel__handler_8cpp.js  a__data__channel__handler_8cpp__incl.map  a__data__channel__handler_8cpp__incl.md5  a__data__channel__handler_8cpp_source.html  a__data__channel__handler_8h.html  a__data__channel__handler_8h.js  a__data__channel__handler_8h__dep__incl.map  a__data__channel__handler_8h__dep__incl.md5  a__data__channel__handler_8h__incl.map  a__data__channel__handler_8h__incl.md5  a__data__channel__handler_8h_source.html  a__dc__handler__configurer_8h.html  a__dc__handler__configurer_8h.js  a__dc__handler__configurer_8h__dep__incl.map  a__dc__handler__configurer_8h__dep__incl.md5  a__dc__handler__configurer_8h__incl.map  a__dc__handler__configurer_8h__incl.md5  a__dc__handler__configurer_8h_source.html  a__media__track__handler_8cpp.html  a__media__track__handler_8cpp.js  a__media__track__handler_8cpp__incl.map  a__media__track__handler_8cpp__incl.md5  a__media__track__handler_8cpp_source.html  a__media__track__handler_8h.html  a__media__track__handler_8h.js  a__media__track__handler_8h__dep__incl.map  a__media__track__handler_8h__dep__incl.md5  a__media__track__handler_8h__incl.map  a__media__track__handler_8h__incl.md5  a__media__track__handler_8h_source.html  a__mosaic__authenticator_8cpp.html  a__mosaic__authenticator_8cpp__incl.map  (+1049 more)
.github/workflows/: doxygen.yml
cmake/: BA_GCS_rtc_sender_config.cmake.in  ThirdPartyLibs.cmake  ba_gcs_rtc_sender-config.cmake.in  mosaic-config.cmake.in  mosaic-core-config.cmake.in  mosaic-rtc-core-config.cmake.in
docs/diagrams/: class_abstract_gcs_connector.puml  class_ba_gcs_ros2.puml  class_data_channel_handler.puml  class_media_track_handler.puml  class_whole_rtc_sender.puml  flow_webrtc_peer_connection.puml
docs/diagrams/autoconfigurer/: class_autoconfigurer.puml  example-config.yaml
docs/diagrams/core/: class_mosaic_core.puml
docs/diagrams/handler/: class_handler.puml
docs/doxygen/: DoxygenLayout.xml  header.html
docs/python/: examples.md  index.md  installation.md  quickstart.md
docs/python/api/: auto-configurer.md  configs.md  core.md  handlers.md  logging.md  overview.md
docs/python/tutorials/: auto-configurer.md  configuration.md  handlers.md  logging.md
include/: rtc_sender.h
include/mosaic/: configs_decl.h  json_forward_decl.h
include/mosaic/auto_configurer/: auto_configurer.h
include/mosaic/core/: connector_state_manager.h  mosaic_connector.h  mosaic_connector_factory.h  peer_connection_manager.h  peer_connection_observer.h
include/mosaic/logger/: i_logger.h  log.h  log_level.h  webrtc_log.h
include/mosaic/observers/: create_sdp_answer_observer.h  peer_connection_observer.h  simple_set_local_description_observer.h  simple_set_remote_description_observer.h
include/mosaic/security/: a_mosaic_authenticator.h  auth_type.h  authenticator_factory.h  authenticator_resolver.h  (+2 more)
include/mosaic_auto_configurer/: auto_configurer.h
include/mosaic_rtc_core/: configs_decl.h  connector_state_manager.h  gcs_connector.h  gcs_connector_factory.h  ice_config.h  mosaic_connector.h  mosaic_connector_factory.h  peer_connection_manager.h  webrtc_forward_decl.h
include/rtc_sender/: client_state_manager.h  connector_state_manager.h  gcs_connector.h  gcs_connector_factory.h  ice_config.h  peer_connection_manager.h  robot_webrtc_client.h  robot_webrtc_client_factory.h  signaling_client.h  signaling_config.h  signaling_server.h  webrtc_forward_decl.h
python/: 404.html  index.html  setup.py.in  sitemap.xml
python/bindings/: bind_auto_configurer.cpp  bind_auto_configurer.h  bind_configs.cpp  bind_configs.h  bind_core.cpp  bind_core.h  bind_data_channel.cpp  bind_data_channel.h  bind_handlers.cpp  bind_handlers.h  bind_logging.cpp  bind_logging.h  bind_media_track.cpp  bind_media_track.h  main.cpp
python/examples/: index.html
python/installation/: index.html
python/mosaic_core/: __init__.py
python/quickstart/: index.html
python/search/: search_index.json
python/test/: .gitignore  Makefile  pyproject.toml
python/test/tests/: test_config_reader_resolver.py  test_logging_level.py  test_yaml_config_reader.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_c.js  classes_d.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  (+76 more)
src/: client_state_manager.cpp  connector_state_manager.cpp  gcs_connector.cpp  gcs_connector_factory.cpp  mosaic_connector.cpp  mosaic_connector_factory.cpp  peer_connection_manager.cpp  robot_webrtc_client.cpp  robot_webrtc_client_factory.cpp  signaling_client.cpp  signaling_server.cpp
src/auto_configurer/: auto_configurer.cpp  connector_resolver.cpp  i_configurable_connector.cpp
src/config_reader/: config_reader_resolver.cpp  yaml_config_reader.cpp
src/core/: connector_state_manager.cpp  mosaic_connector.cpp  mosaic_connector_factory.cpp  peer_connection_manager.cpp  peer_connection_observer.cpp
src/logger/: log_service.cpp  webrtc_log.cpp
src/observers/: create_sdp_answer_observer.cpp  data_channel_observer.cpp  peer_connection_observer.cpp  simple_set_local_description_observer.cpp  simple_set_remote_description_observer.cpp
src/security/: a_mosaic_authenticator.cpp  authenticator_resolver.cpp
src/signaling/: signaling_client.cpp  websocket_client.cpp
src/websocket/: websocket_client.cpp
test/: test_logging_level.cpp  test_websocket_client.cpp
test/config_reader/: test_config.yaml  test_config_reader_resolver.cpp  test_mosaic_config.yaml  test_yaml_config_reader.cpp
test/logger/: test_logging_level.cpp
test/signaling/: test_websocket_client.cpp
(+105 files in other folders)
